--- a/src/Chat.css
+++ b/src/Chat.css
@@ -8,8 +8,17 @@
     transform: translateX(-50%);
     max-width: 100%;
     width: 90%;
+    overflow: auto;
+    overflow-y: auto;
   }
   
+#chat-panel {
+    display: block;
+    width: 100%;
+    height: 10px;
+    padding:4px;
+}
+
   .input-container {
     display: flex;
     width: 100%;
